Actualizando botones css

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       <div id="box1" class="flex-item">
         <div class="flex-top-bar">
           <span class="title">CODE</span>
-          <button type="button" name="button" onclick="translateInputCode();">Translate</button>
+          <button class = "btn" id="Translate" type="button" name="button" onclick="translateInputCode();"><span>Translate</span></button>
         </div>
         <code id="box1-code" contentEditable="true">
           <p class="code-paragraph">void add(numeric a, numeric b) {</p>
@@ -39,7 +39,7 @@
       <div id="box2" class="flex-item">
         <div class="flex-top-bar">
           <span class="title">JAVSCRIPT</span>
-          <button type="button" name="button" onclick="evalCodeOutput();">Evaluate</button>
+          <button class = "btn" id="Evaluate" type="button" name="button" onclick="evalCodeOutput();"><span>Evaluate</span></button>
         </div>
         <code id="box2-code" contentEditable="false">
         </code>
