Actualizando top-bar

--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,11 @@
 
     <div class="top-bar">
       <div class="dropdown">
-        <button id="dropdown-button" onclick="showDropdown()">Examples</button>
-        <button>Tutorial</button>
-        <button>Tests</button>
-        <button>Github</button>
-        <button>More</button>
+        <button  class = "btn-top" id="dropdown-button" onclick="showDropdown()">Examples</button>
+        <button class = "btn-top" >Tutorial</button>
+        <button class = "btn-top" >Tests</button>
+        <button class = "btn-top" >Github</button>
+        <button class = "btn-top" >More</button>
         <div id="dropdown-examples" class="dropdown-content">
           <span onclick="loadExample(0)">Load example 1</span>
           <span onclick="loadExample(1)">Load example 2</span>
