--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="style/mainSizes.css">
   </head>
   <body>
-<div id="mainPrincipal">
+
     <div class="top-bar">
       <div class="dropdown">
-        <button  class = "btn-top" id="dropdown-button" onclick="showDropdown()">Examples</button>
+        <button class = "btn-top" onclick="showMore2()">Home</button>
+        <button class = "btn-top" id="dropdown-button" onclick="showDropdown()">Examples</button>
         <button class = "btn-top" >Tutorial</button>
         <button class = "btn-top" >Tests</button>
         <button class = "btn-top" onclick="location.href = 'https://github.com/ULL-ESIT-PL-1617/proyecto-pl-airam-jorge-kevin';">Github</button>
@@ -24,7 +25,7 @@
         </div>
       </div>
     </div>
-
+  <div id="mainPrincipal">
     <div class="flex-container">
       <div id="box1" class="flex-item">
         <div class="flex-top-bar">
