--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 
     <div class="top-bar">
       <div class="dropdown">
-        <button class = "btn-top" onclick="showMore2()">Home</button>
+        <button class = "btn-top" onclick="showHome()">Home</button>
         <button class = "btn-top" id="dropdown-button" onclick="showDropdown()">Examples</button>
         <button class = "btn-top" >Tutorial</button>
         <button class = "btn-top" >Tests</button>
