--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <title></title>
     <link rel="stylesheet" href="style/main.css">
     <link rel="stylesheet" href="style/mainSizes.css">
+    <link rel="icon" href="image/icon.png">
   </head>
   <body>
 
