--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style/main.css">
     <link rel="stylesheet" href="style/mainSizes.css">
     <link rel="icon" href="image/icon.png">
+    <title>Ragevi</title>
   </head>
   <body>
 
